added progress bar

--- a/experiment/norming.html
+++ b/experiment/norming.html
@@ -26962,6 +26962,7 @@ timeline.unshift(intro)
 
 jsPsych.init({
   timeline: timeline,
+  show_progress_bar: true,
   // display_element: 'jspsych-experiment',
   on_finish: function() {
     var filename = "polysemy_norming_pilot_" + subject_id + ".csv";
