--- a/experiment/norming.html
+++ b/experiment/norming.html
@@ -34874,7 +34874,7 @@ for (var i = 0; i < all_trials.length; i++) {
 timeline = jsPsych.randomization.shuffle(timeline)
 
 
-// timeline.unshift(consent_trial)
+timeline.unshift(consent_trial)
 
 
 timeline.unshift(intro)
