--- a/experiment/norming.html
+++ b/experiment/norming.html
@@ -34892,7 +34892,7 @@ timeline = jsPsych.randomization.shuffle(timeline)
 
 timeline.unshift(intro)
 timeline.unshift(consent_trial)
-timeline.unshift(bot_trial)
+timeline.unshift(bot_check)
 
 
 
