--- a/experiment/norming.html
+++ b/experiment/norming.html
@@ -36452,6 +36452,28 @@ all_trials = [
 ]
 
 
+////// Debrief
+var demographics_survey_1 = {
+    type: 'survey-multi-choice',
+    questions: [
+      {prompt: "What is your gender?", name: 'Gender', options: ['Male','Female','Other'], required:true},
+      {prompt: "Are you a native speaker of English?", name: 'Native', options: ['Yes','No'], required: true}
+    ],
+    on_finish: function(){
+        jsPsych.setProgressBar(jsPsych.getProgressBarCompleted()+(1/245));
+    }
+  };
+
+  var demographics_survey_2 = {
+    type: 'survey-text',
+    questions: [
+      {prompt: "How old are you?"},
+    ],
+    on_finish: function(){
+        jsPsych.setProgressBar(jsPsych.getProgressBarCompleted()+(1/245));
+    }
+  };
+
 // Set up timeline
 var timeline = []
 
@@ -36471,10 +36493,13 @@ timeline = jsPsych.randomization.shuffle(timeline)
 
 
 // Add intro, bot check, and consent trial
-
 timeline.unshift(intro)
 timeline.unshift(bot_check)
 timeline.unshift(consent_trial)
+
+// Add debrief
+timeline.push(demographics_survey_1)
+timeline.push(demographics_survey_1)
 
 
 
