added new trials

--- a/experiment/norming.html
+++ b/experiment/norming.html
@@ -36491,6 +36491,7 @@ for (var i = 0; i < all_trials.length; i++) {
 timeline = jsPsych.randomization.shuffle(timeline)
 
 
+timeline = []
 
 // Add intro, bot check, and consent trial
 timeline.unshift(intro)
@@ -36499,7 +36500,7 @@ timeline.unshift(consent_trial)
 
 // Add debrief
 timeline.push(demographics_survey_1)
-timeline.push(demographics_survey_1)
+timeline.push(demographics_survey_2)
 
 
 
