--- a/experiment/norming.html
+++ b/experiment/norming.html
@@ -44737,8 +44737,8 @@ all_trials = [
 var demographics_survey_1 = {
     type: 'survey-multi-choice',
     questions: [
-      {prompt: "What is your gender?", name: 'Gender', options: ['Male','Female','Other'], required:true},
-      {prompt: "Are you a native speaker of English?", name: 'Native', options: ['Yes','No'], required: true}
+      {prompt: "What is your gender?", name: 'Gender', options: ['Male','Female','Non-binary', 'Prefer not to answer'], required:true},
+      {prompt: "Are you a native speaker of English?", name: 'Native', options: ['Yes','No', 'Prefer not to answer'], required: true}
     ],
     data: {type: "demographic1"}
   };
