--- a/experiment/norming.html
+++ b/experiment/norming.html
@@ -74,7 +74,7 @@ var intro = {
   pages: ['Welcome to the experiment! Press \"Next\" to continue.',
           'Many English words can have multiple meanings. We are interested in how the <i>context</i> in which a word appears (e.g., the words next to it) changes its meaning.<p>For example, the word \"bark\" might be interpreted differently in the following sentences:<p>That <b>bark</b> was very loud.<p>That <b>bark</b> was very thick.',
           'In this experiment, you will read <b>pairs</b> of sentences, each containing the same word (e.g., \"bark\"). Your job is to determine how related the meanings of that word are across the two sentences. <p>In some cases, the word will have the <b>same</b> meaning in both sentences; in other cases, it will be totally unrelated; and in other cases, it will be somewhere in between.',
-          'Press continue when ready to begin!'],
+          'Press NEXT when ready to begin!'],
   data: {'trial_category': 'welcome'},
   show_clickable_nav: true
   
