--- a/experiment/np_sona.html
+++ b/experiment/np_sona.html
@@ -44751,7 +44751,7 @@ var catch_trial_1 = {
                 ]
             }
         ],
-        "preamble": "It was a blue <b>house</b>. It was a blue <b>house</b>.",
+        "preamble": "It was a blue <b>house</b>.<p>It was a blue <b>house</b>.",
         "data": {
             "word": "house",
             "same": true,
@@ -44784,7 +44784,7 @@ var catch_trial_2 = {
                 ]
             }
         ],
-        "preamble": "It was a red <b>rose</b>. He <b>rose</b> to the occasion.",
+        "preamble": "It was a red <b>rose</b>.<p>He <b>rose</b> to the occasion.",
         "data": {
             "word": "rose",
             "same": false,
