--- a/experiment/np_sona.html
+++ b/experiment/np_sona.html
@@ -93,6 +93,7 @@ var bot_check = {
     options: jsPsych.randomization.shuffle(['Ocean', 'Chair', 'River', 'Pool']), 
     required: true}
   ],
+  data: {type: 'bot_check'}
 };
 
 
