--- a/experiment/np_sona.html
+++ b/experiment/np_sona.html
@@ -44869,7 +44869,7 @@ jsPsych.init({
     $(".jspsych-display-element").html("<div style='margin:2em;'> \
     <p>The results have been recorded! \
     Data was recorded under the participant ID: <b>" + subject_id + "</b> \
-    </p>\
+    </p><p>If you have any questions, please contact Sean Trott at sttrott@ucsd.edu.\
     <div>");
   },
   default_iti: 250
