--- a/experiment/s1_sona.html
+++ b/experiment/s1_sona.html
@@ -75,7 +75,7 @@ var intro_instructions = {
   type: 'instructions',
   pages: ['Welcome to the experiment! Press \"Next\" to continue.',
           'In this experiment, you will read a series of sentences. <p>Some sentences will describe plausible scenarios, others will not. Your task is to indicate which sentences make sense and which do not make sense.',
-          'Additionally, each pair of sentences will also contain an overlapping word (like <i>table</i>). Sometimes the context for this word will make sense (like <i>wooden table</i>) and sometimes it will be strange or implausible (like <i>walking table</i>).',
+          'Additionally, each pair of sentences will also contain an overlapping word (like <i>table</i>). <p>Sometimes the context for this word will make sense (like <i>wooden table</i>) and sometimes it will be strange or implausible (like <i>walking table</i>).',
           'To give you a better sense of what we mean by plausible and implausible, you will first complete a series of <b>practice trials</b>.<p>After each practice trial, you will receive feedback about whether you answered correctly.',
           'Please try to complete each trial as <b>accurately</b> and <b>quickly</b> as possible. Click NEXT to start the practice trials!'],
   data: {'trial_category': 'welcome'},
