Updated practice trials

--- a/experiment/s1_sona.html
+++ b/experiment/s1_sona.html
@@ -74,7 +74,7 @@ function saveData(filename, filedata) {
 var intro_instructions = {
   type: 'instructions',
   pages: ['Welcome to the experiment! Press \"Next\" to continue.',
-          'In this experiment, you will read a series of sentences. <p>Some sentences will describe plausible scenarios, others will not. Your task is to indicate which sentences make sense and which do not make sense.',
+          'In this experiment, you will read a series of sentences. <p>Some sentences will describe plausible scenarios, others will not. Your task is to indicate which sentences make sense and which do not make sense. Press the <b>y</b> key if you think a sentence makes sense, and press the <b>n</b> key if it does not.',
           'To give you a better sense of what we mean by plausible and implausible, you will first complete a series of <b>practice trials</b>.<p>After each practice trial, you will receive feedback about whether you answered correctly.',
           'Please try to complete each trial as <b>accurately</b> and <b>quickly</b> as possible. Click NEXT to start the practice trials!'],
   data: {'trial_category': 'welcome'},
