--- a/experiment/s1_sona.html
+++ b/experiment/s1_sona.html
@@ -77873,7 +77873,7 @@ timeline.unshift(intro_instructions)
 // TODO: Add intro, consent trial, bot check, etc.
 
 timeline.unshift(bot_check)
-// timeline.unshift(consent_trial)
+timeline.unshift(consent_trial)
 
 
 // Add debrief
