--- a/experiment/s1_sona.html
+++ b/experiment/s1_sona.html
@@ -72676,7 +72676,7 @@ jsPsych.init({
   show_progress_bar: true,
   // display_element: 'jspsych-experiment',
   on_finish: function() {
-    var filename = "polysemy_s1_pilot_" + subject_id + ".csv";
+    var filename = "polysemy_s1_sona_" + subject_id + ".csv";
     saveData(filename, jsPsych.data.get().csv());
     console.log(jsPsych.data.get().csv())
     $(".jspsych-display-element").html("<div style='margin:2em;'> \
