--- a/experiment/consent.html
+++ b/experiment/consent.html
@@ -9,7 +9,7 @@
     <p>
 
       <input type="checkbox" id="consent_checkbox" />
-      <label for="consent_checkbox">I agree to participate in this study</label>
+      <label for="consent_checkbox">I agree to participate in this study.</label>
     </p>
     <p>
       <button type="button" id="consent">Continue</button>
