--- a/experiment/consent.html
+++ b/experiment/consent.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <embed type="application/pdf" src="consent.pdf" width="1000" height="600">
+    <embed type="application/pdf" src="new_consent.pdf" width="1000" height="600">
     <p>
 
       <input type="checkbox" id="consent_checkbox" />
