--- a/experiment/consent.html
+++ b/experiment/consent.html
@@ -12,7 +12,7 @@
       <label for="consent_checkbox">I agree to participate in this study.</label>
     </p>
     <p>
-      <button type="button" id="consent">Continue</button>
+      <button type="button" id="consent">Continue.</button>
     </p>
   </body>
 </html>
