--- a/experiment/dominance_sona.html
+++ b/experiment/dominance_sona.html
@@ -48,7 +48,7 @@ var check_consent = function(elem) {
 
 var consent_trial = {
     type: 'external-html',
-    url: "consent.html",
+    url: "new_consent.html",
     cont_btn: "consent",
     check_fn: check_consent
 }
