--- a/experiment/dominance_sona.html
+++ b/experiment/dominance_sona.html
@@ -72,9 +72,9 @@ function saveData(filename, filedata) {
 var intro = {
   type: 'instructions',
   pages: ['Welcome to the experiment! Press \"Next\" to continue.',
-          'Some words can have different meanings depending on the context. For example, the word "bark" might be interpreted differently in the following sentences: <p>That <b>port</b> was very windy. ||| That <b>port</b> was very delicious.',
-          'Furthermore, sometimes one of these meanings is much more <b>common</b> than the other.<p>For example, the meaning of "port" in "windy <b>port</b>" is more frequent than "delicious <b>port</b>."<p>The more frequent meaning is sometimes called the <b>dominant</b> meaning.',
-          'In this experiment, you will read <b>pairs</b> of sentences, each containing the same word (e.g., \"port\"). The word will have a different meaning in the two sentences. Your task is to determine which use of the word is more <b>dominant</b>.',
+          'Some words can have different meanings depending on the context. For example, the word "bark" might be interpreted differently in the following sentences: <p>That data <b>table</b> is very large. ||| That wooden <b>table</b> is very large.',
+          'Furthermore, sometimes one of these meanings is much more <b>common</b> than the other.<p>For example, the meaning of "table" in "wooden <b>table</b>" is more frequent than "data <b>table</b>."<p>The more frequent meaning is sometimes called the <b>dominant</b> meaning.',
+          'In this experiment, you will read <b>pairs</b> of sentences, each containing the same word (e.g., \"table\"). The word will have a different meaning in the two sentences. Your task is to determine which use of the word is more <b>dominant</b>.',
           'You will read about 115 pairs of sentences overall. <p>Press NEXT when ready to begin!'],
   data: {'trial_category': 'welcome'},
   show_clickable_nav: true
