--- a/experiment/dominance_sona.html
+++ b/experiment/dominance_sona.html
@@ -24560,7 +24560,7 @@ jsPsych.init({
     <p>The results have been recorded! \
     Data was recorded under the participant ID: <b>" + subject_id + "</b> \
     <p>Please fill out this short Google Form to make sure you are awarded credit for your participation: <a href=https://forms.gle/Axw6SRetdBJgksCT6>https://forms.gle/Axw6SRetdBJgksCT6</a> <p> \
-    Note that this study was <b>BB02</b>. \
+    Note that this study was <b>21BB03</b>. \
     </p><p>If you have any questions, please contact Sean Trott at sttrott@ucsd.edu.\
     <div>");
   },
