Action norms image

--- a/experiment/sensorimotor_sona.html
+++ b/experiment/sensorimotor_sona.html
@@ -13219,8 +13219,11 @@ timeline.unshift(bot_check)
 timeline.unshift(consent_trial)
 
 // Add debrief
-// timeline.push(demographics_survey_1)
-// timeline.push(demographics_survey_2)
+timeline = []
+timeline.push(demographics_survey_1)
+timeline.push(demographics_survey_2)
+
+
 
 jsPsych.init({
   timeline: timeline,
